--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-knowledge-base-chatbot",
+  "name": "chatchok:-knowledge-base-chatbot",
   "private": true,
   "version": "0.0.0",
   "type": "module",
